--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A: Adds changed files in our working directory to the staging area of Git</li>
+          <li>git add -A: Adds changed files in our working directory to the staging area of Git - Commit files in theworking branch</li>
+          <li>git commit -m "Any comment you want": Commits staged files to our repository</li>
+          <li>git pull origin main: Pulls the base branch into your feature branch</li>
+          <li>git push origin branch-name: Pushes modificatgions into GITHUB</li>
+       
         </ul>
+
       </section>
    
       <section class="card" id="javascript-section">
