--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
         <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on</li>
+          <li>git checkout main: Takes you to main if you are not on main</li>
+          <li>git pull origin main: Matches local main wih original main</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>------   add code, make midifications  --------</li>
           <li>git add -A: Adds changed files in our working directory to the staging area of Git - Commit files in theworking branch</li>
           <li>git commit -m "Any comment you want": Commits staged files to our repository</li>
           <li>git pull origin main: Pulls the base branch into your feature branch</li>
           <li>git push origin branch-name: Pushes modificatgions into GITHUB</li>
+
+          <li>git branch: Show the list of branches</li>
        
         </ul>
 
@@ -49,7 +55,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <ul>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+          </ul>
         </ul>
       </section>
 
