Added README information

--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
           <li>git checkout main: Takes you to main if you are not on main</li>
           <li>git pull origin main: Matches local main wih original main</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>------   add code, make midifications  --------</li>
           <li>git add -A: Adds changed files in our working directory to the staging area of Git - Commit files in theworking branch</li>
           <li>git commit -m "Any comment you want": Commits staged files to our repository</li>
-          <li>git pull origin main: Pulls the base branch into your feature branch</li>
           <li>git push origin branch-name: Pushes modificatgions into GITHUB</li>
-
           <li>git branch: Show the list of branches</li>
-       
+          <li>git config -l: Show the list of configurations</li>
+          <li>git merge --abort: abort the last merge</li>
+          <li>git restore file-name: unstage or discard uncommitted local changes</li>
+  
         </ul>
 
       </section>
