Added line on GIT section to see changes in the browser

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li>git config -l: Show the list of configurations</li>
           <li>git merge --abort: abort the last merge</li>
           <li>git restore file-name: unstage or discard uncommitted local changes</li>
+          <li>Terminal: PWD, cd mkdir and touch</li>
   
         </ul>
 
@@ -68,4 +69,4 @@
     </footer>
     <script src="./assets/script.js"></script>
   </body>
-</html>
+</html
